fix:(ABOUT) Adding z-index to the articles on the About page to fix the photos under the navbar when scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@
   }
 }
 
+.navbar {
+  z-index: 1; /* Ajoutez cette ligne */
+}
+
 .marquee {
   display: flex;
   animation: marquee 80s linear infinite;
@@ -41,8 +45,13 @@ body {
 .backstage-img {
   height: 40vh;
 }
+
 .navbar-transition {
   transition: transform 0.2s;
+}
+
+.article {
+  z-index: 0; /* Ajoutez cette ligne */
 }
 
 :root {
